<resources>
    <string name="app_name">Pharmaplat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="avatar">avatar</string>
    <string name="search_market_hint">Search the market</string>
    <string name="wholesalers">Wholesalers</string>
    <string name="categories">Categories</string>
    <string name="popular_items_text_view">Popular items right now</string>
    <string name="meropenem">Meropenem</string>
    <string name="description_about_the_item">Description about the item.</string>
    <string name="ex_date_08_22">Ex-date 08/22</string>
    <string name="negotiable">Negotiable</string>
    <string name="jemal_wholesaler">Jemal Wholesaler</string>
    <string name="featured_campaigns">Featured Campaigns</string>
    <string name="amphotercin_b">Amphotercin B</string>
    <string name="bulk_item_image_view">Bulk item image view</string>
    <string name="target">Target</string>
    <string name="_20_30">20/30</string>
    <string name="saving">Saving</string>
    <string name="_473_birr">473 Birr</string>
    <string name="show_campaign">Show Campaign</string>
    <string name="welcome">Welcome</string>
    <string name="signin">Signin</string>
    <string name="signup">Signup</string>
    <string name="string_welcome" />
    <string name="mobile_number">Mobile Number</string>
    <string name="user_name">User Name</string>
    <string name="forget_password">Forget Password</string>
    <string name="password">Password</string>
    <!--    <string name="new_password">New Password</string>-->
    <!--    <string name="confirm_password">Confirm Password</string>-->
    <string name="or">OR</string>
    <string name="asdf">klsdlfij ioshg fdsoi idfjo cidus voifudf vdoiufid</string>
    <string name="comment">Comment</string>
    <string name="long_text">No coffee grinder at home? No problem. Just grind your coffee at the grocery store using their big coffee grinder
machine, with the dial set on the coarse/French press option. I’ve provided approximate amounts of ground coffee to
use if you don’t have a scale for a more accurate weight measurement (don’t worry about it).</string>
    <string name="mute">Mute</string>
    <string name="photo_message">Photo Message</string>
    <string name="kibur_gena">Kibur Gena</string>
    <string name="join_campaign">Join Campaign</string>
    <string name="lamark_wholesaler">Lamark Wholesaler</string>
    <string name="cancel">Cancel</string>
    <string name="most_wanted_recently">Most wanted recently</string>
    <string name="meron_asfaw">Meron Asfaw</string>
    <string name="_7_vials">7 vials</string>
    <string name="_31_requests">31 requests</string>
    <string name="_4_alive">4 alive</string>
    <string name="_27_expired">27 Expired</string>
    <string name="frequently_requested">Frequently Requested</string>
    <string name="_4_aalive">4 Alive</string>
    <string name="chat">Chat</string>
    <string name="popular">Popular</string>
    <string name="hot_deals">Hot deals</string>
    <string name="comment_with_zero_counts"> Comment </string>
    <plurals name="comment_with_counts">
        <item quantity="one"> Comment (%1$d)</item>
        <item quantity="other"> Comments (%1$d)</item>
    </plurals>

    <string name="new_1">New</string>
    <string name="distrubuters">Distrubuters</string>
    <string name="distributers">Distributers</string>
    <string name="catagory_symbol_image">Category symbol image</string>
    <string name="details">Details</string>
    <string name="_21_posts">21 Posts</string>
    <string name="continue_1">Continue</string>
    <string name="code">Co&#10;de</string>
    <string name="verification">Verification</string>
    <string name="enter_one_time_sms">Enter SMS code Sent on
        &#10;%1$d</string>
    <string name="verify_code">Verify</string>
    <string name="login_signup_heading">Work&#10;Smart</string>
    <string name="login_signup_tagline">Get all your Market information needs in one place.</string>
    <string name="login">LogIn</string>
    <string name="how_we_work">How we work?</string>
    <string name="username">Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="remeber_me1">Remeber me</string>
    <string name="remember_me">Remember Me</string>
    <string name="create_naccount">Create\nAccount</string>

    <string name="transition_name">transition_login</string>
    <string name="create_account">Create Account</string>
    <string name="co_nde">Code</string>
    <string name="co_nde2">Co\nde</string>
    <string name="co_nde3">Co\nde</string>
    <string name="create_account_2_lines">create \nAccount</string>
    <string name="enter_full_name">Enter full name</string>
    <string name="full_name">Full Name</string>
    <string name="user_name1">User Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="next">Next</string>
    <string name="choose_gender">Choose Gender</string>
    <string name="account_type">Account Type</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="select">Select</string>
    <string name="select_your_age">Select Your Age</string>
    <string name="forget_npassword">Forget \nPassword</string>
    <string name="provide_your_account_s_phone_number">Provide your account\'s phone number.</string>
    <string name="send_ncode">Send\nCode</string>
    <string name="via_sms">Via SMS</string>
    <string name="_251912741698">+251912741698</string>
    <string name="via_sms1">Via SMS:</string>
    <string name="new_ncredentials">New\nCredentials</string>
    <string name="your_identity_has_been_verified_n_set_your_new_password">Your identity has been verified!\n Set your new password.</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="ok">OK</string>
    <string name="password_updated">Password Updated</string>
    <string name="your_password_has_been_updated">Your password has been updated.</string>
    <string name="when_were_you_born">When were you born?</string>
    <string name="find_what_you_want">Find what you want.</string>
    <string name="catalix">Catalix</string>
    <string name="search_text">Search text</string>
    <string name="search">Search...</string>
    <string name="medicines">Medicines</string>
    <string name="equipments">Equipments</string>
    <string name="services">Services</string>
    <string name="featured">Featured</string>
    <string name="most_viewed">Most Viewed</string>
    <string name="view_all">View all</string>
    <string name="featured_image">Featured image</string>
    <string name="picture_of_the_hot_deal">Picture of the hot deal.</string>
    <string name="vaccancy">Vaccancy</string>
    <string name="home">Home</string>
    <string name="market">Market</string>
    <string name="feed">Feed</string>
    <string name="demand">Demand</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="pharmaceuticals">Pharmaceuticals</string>

    <string name="vacancy">Vacancy</string>
    <string name="share">Share</string>
    <string name="rate_us">Rate Us</string>
    <string name="all_your_information_needs">All your information needs</string>
    <string name="contribute">Contribute</string>
    <string name="menu">Menu</string>
    <string name="open">Open</string>
    <string name="muskuloskeletal_and_joint_disease_medicines">MUSKULOSKELETAL AND JOINT DISEASE MEDICINES</string>
    <string name="fluid_electrolyte_and_acid_base_balance_medicines">Fluid, Electrolyte and Acid Base Balance Medicines</string>
    <string name="vacancies">Vacancies</string>
    <string name="instruments">Instruments</string>
    <string name="search_requested_items">Search requested items</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="get_notifications">Get \nNotifications</string>
    <string name="get_notifications_description">Enable notifications to be notified instantly when a particular item is requested.</string>
    <string name="most_requested">Most requested</string>
    <string name="recent_requests">Recent Requests</string>
    <string name="_4_3">4.3</string>
    <string name="_374">374</string>
    <string name="rating">Rating</string>
    <string name="joined">Joined</string>
    <string name="ago">ago</string>
    <string name="_7_months">7 months</string>
    <string name="_11_days_back">11 days back</string>
    <string name="reviews">Reviews</string>
    <string name="_32">32</string>
    <string name="all">All</string>
    <string name="critical">Critical</string>
    <string name="positive">Positive</string>
    <string name="_24">24</string>
    <string name="_8">8</string>
    <string name="meronasfaw">meronAsfaw</string>
    <string name="general_post_image">General post image</string>
    <string name="gastrointestinal_medicines">Gastrointestinal Medicines</string>
    <string name="apparently">Apparently, this user prefers to keep an air of mystery about them.</string>
    <string name="verify_phone">Catalix will send an SMS message to verify your phone number.</string>
    <string name="type_here">Type Here</string>
    <string name="update">Update</string>
    <string name="choose_profile_picture">Choose Profile Picture (Optional)</string>
    <string name="upload_picture_detail">This is how your picture will appear.</string>
    <string name="upload">Upload</string>
    <string name="back_button">Back Button</string>
    <string name="personal">Personal</string>
    <string name="company">Company</string>
    <string name="edit_profile_picture">Edit Profile Picture</string>
    <string name="edit_profile_name">Edit Profile Name</string>
    <string name="edit_profile_bio">Edit Profile Bio</string>
    <string name="give_us_bio">Can you tell us a bit about You? (Optional)</string>
    <string name="add_profile_picture">Add Profile Picture (Optional)</string>
    <string name="send">Send</string>
    <string name="userName">\@%1$s!</string>
    <string name="sign_out">Sign out</string>
    <string name="create_post">Create Post</string>
    <string name="cancel_creating_post">Cancel creating post</string>
    <string name="title">Title</string>
    <string name="description_optional">Description (Optional)</string>
    <string name="add_picture">Add Picture</string>
    <string name="post">Post</string>
    <string name="category_name">%1$S Category</string>
    <string name="cancel_post">Cancel Post</string>
    <string name="search_for_products">Search for Products...</string>
    <string name="product_profile_picture">Product Profile Picture</string>
    <string name="company_profile_picture">Company Profile Picture</string>


</resources>