<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardElevation="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_view_background">

            <ImageView
                android:id="@+id/market_item_image_view"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:contentDescription="@string/avatar"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/avatars[1]"/>
            <TextView
                android:id="@+id/item_name_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/meropenem"
                android:layout_toEndOf="@id/market_item_image_view"
                android:layout_marginStart="8dp"
                android:textSize="20sp"
                android:fontFamily="sans-serif-light"
                android:textColor="@color/black"
                android:layout_toRightOf="@id/market_item_image_view"
                android:layout_marginLeft="8dp" />

            <TextView
                android:id="@+id/ex_date_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/ex_date_08_22"
                android:layout_below="@id/item_name_text_view"
                android:layout_toEndOf="@id/market_item_image_view"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/market_item_image_view" />
            <TextView
                android:id="@+id/item_price_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/negotiable"
                android:textColor="#03A31D"
                android:layout_below="@id/ex_date_text_view"
                android:layout_toEndOf="@id/market_item_image_view"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/market_item_image_view" />

            <TextView
                android:id="@+id/description_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:maxHeight="75dp"
                android:text="@string/description_about_the_item"
                android:layout_below="@id/item_price_text_view"
                android:layout_toEndOf="@id/market_item_image_view"
                android:layout_marginLeft="8dp"
                android:layout_toRightOf="@id/market_item_image_view" />
            <TextView
                android:id="@+id/seller_name_in_item_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/jemal_wholesaler"
                android:layout_below="@id/market_item_image_view"
                android:textSize="14sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/seller_name_in_item_tv"
                android:layout_marginTop="8dp"
                android:gravity="center">

                <Button
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/details"
                    android:background="@drawable/button_sign_background"
                    tools:ignore="ButtonStyle" />

                <Button
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/chat"
                    android:background="@drawable/button_sign_background"
                    tools:ignore="ButtonStyle"
                    android:layout_marginLeft="24dp"
                    android:layout_marginStart="24dp"/>

            </LinearLayout>







        </RelativeLayout>


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>